--- a/BakerySystemMVC/web/WEB-INF/web.xml
+++ b/BakerySystemMVC/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>cs</servlet-name>
-        <url-pattern>/account/</url-pattern>
+        <url-pattern>/account</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
