--- a/BakerySystemRest/nbproject/project.properties
+++ b/BakerySystemRest/nbproject/project.properties
@@ -28,7 +28,37 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.mail.jar=C:\\Credits\\javamail-1.4.5\\mail.jar
+file.reference.aopalliance-repackaged-2.5.0-b32.jar=web/libs/Rest/ext/aopalliance-repackaged-2.5.0-b32.jar
+file.reference.hk2-api-2.5.0-b32.jar=web/libs/Rest/ext/hk2-api-2.5.0-b32.jar
+file.reference.hk2-locator-2.5.0-b32.jar=web/libs/Rest/ext/hk2-locator-2.5.0-b32.jar
+file.reference.hk2-utils-2.5.0-b32.jar=web/libs/Rest/ext/hk2-utils-2.5.0-b32.jar
+file.reference.jackson-all-1.9.11.jar=web/libs/JSON/jackson-all-1.9.11.jar
+file.reference.jackson-annotations-2.8.8.jar=web/libs/JSON/jackson-annotations-2.8.8.jar
+file.reference.jackson-core-2.8.8.jar=web/libs/JSON/jackson-core-2.8.8.jar
+file.reference.jackson-databind-2.8.8.1.jar=web/libs/JSON/jackson-databind-2.8.8.1.jar
+file.reference.javassist-3.20.0-GA.jar=web/libs/Rest/ext/javassist-3.20.0-GA.jar
+file.reference.javax.annotation-api-1.2.jar=web/libs/Rest/ext/javax.annotation-api-1.2.jar
+file.reference.javax.inject-2.5.0-b32.jar=web/libs/Rest/ext/javax.inject-2.5.0-b32.jar
+file.reference.javax.servlet-api-3.0.1.jar=web/libs/Rest/ext/javax.servlet-api-3.0.1.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=web/libs/Rest/api/javax.ws.rs-api-2.0.1.jar
+file.reference.jaxb-api-2.2.7.jar=web/libs/Rest/ext/jaxb-api-2.2.7.jar
+file.reference.jersey-client.jar=web/libs/Rest/lib/jersey-client.jar
+file.reference.jersey-common.jar=web/libs/Rest/lib/jersey-common.jar
+file.reference.jersey-container-servlet-core.jar=web/libs/Rest/lib/jersey-container-servlet-core.jar
+file.reference.jersey-container-servlet.jar=web/libs/Rest/lib/jersey-container-servlet.jar
+file.reference.jersey-guava-2.25.1.jar=web/libs/Rest/ext/jersey-guava-2.25.1.jar
+file.reference.jersey-media-jaxb.jar=web/libs/Rest/lib/jersey-media-jaxb.jar
+file.reference.jersey-server.jar=web/libs/Rest/lib/jersey-server.jar
+file.reference.json-simple-1.1.1.jar=web/libs/JSON/json-simple-1.1.1.jar
+file.reference.json-simple-2.3.0.jar=web/libs/JSON/json-simple-2.3.0.jar
+file.reference.json-simple-3.0.2.jar=web/libs/JSON/json-simple-3.0.2.jar
+file.reference.json-simple-3.1.0.jar=web/libs/JSON/json-simple-3.1.0.jar
+file.reference.mail.jar=web/libs/Email/mail.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=web/libs/Database/mysql-connector-java-5.1.45-bin.jar
+file.reference.org.osgi.core-4.2.0.jar=web/libs/Rest/ext/org.osgi.core-4.2.0.jar
+file.reference.osgi-resource-locator-1.0.1.jar=web/libs/Rest/ext/osgi-resource-locator-1.0.1.jar
+file.reference.persistence-api-1.0.jar=web/libs/Rest/ext/persistence-api-1.0.jar
+file.reference.validation-api-1.1.0.Final.jar=web/libs/Rest/ext/validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,6 +68,36 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
+    ${file.reference.javax.ws.rs-api-2.0.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
+    ${file.reference.aopalliance-repackaged-2.5.0-b32.jar}:\
+    ${file.reference.hk2-api-2.5.0-b32.jar}:\
+    ${file.reference.hk2-locator-2.5.0-b32.jar}:\
+    ${file.reference.hk2-utils-2.5.0-b32.jar}:\
+    ${file.reference.javassist-3.20.0-GA.jar}:\
+    ${file.reference.javax.annotation-api-1.2.jar}:\
+    ${file.reference.javax.inject-2.5.0-b32.jar}:\
+    ${file.reference.javax.servlet-api-3.0.1.jar}:\
+    ${file.reference.jaxb-api-2.2.7.jar}:\
+    ${file.reference.jersey-guava-2.25.1.jar}:\
+    ${file.reference.org.osgi.core-4.2.0.jar}:\
+    ${file.reference.osgi-resource-locator-1.0.1.jar}:\
+    ${file.reference.persistence-api-1.0.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}:\
+    ${file.reference.jersey-client.jar}:\
+    ${file.reference.jersey-common.jar}:\
+    ${file.reference.jersey-container-servlet-core.jar}:\
+    ${file.reference.jersey-container-servlet.jar}:\
+    ${file.reference.jersey-media-jaxb.jar}:\
+    ${file.reference.jersey-server.jar}:\
+    ${file.reference.jackson-all-1.9.11.jar}:\
+    ${file.reference.jackson-annotations-2.8.8.jar}:\
+    ${file.reference.jackson-core-2.8.8.jar}:\
+    ${file.reference.jackson-databind-2.8.8.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.json-simple-2.3.0.jar}:\
+    ${file.reference.json-simple-3.0.2.jar}:\
+    ${file.reference.json-simple-3.1.0.jar}:\
     ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -68,6 +128,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
