--- a/BakerySystemMVC/nbproject/project.properties
+++ b/BakerySystemMVC/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -96,13 +97,15 @@ javac.classpath=\
     ${file.reference.org.osgi.core-4.2.0.jar}:\
     ${file.reference.osgi-resource-locator-1.0.1.jar}:\
     ${file.reference.persistence-api-1.0.jar}:\
-    ${file.reference.validation-api-1.1.0.Final.jar}
+    ${file.reference.validation-api-1.1.0.Final.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -127,6 +130,7 @@ no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
