--- a/BakerySystemMVC/nbproject/project.properties
+++ b/BakerySystemMVC/nbproject/project.properties
@@ -29,42 +29,43 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.aopalliance-repackaged-2.5.0-b32.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\aopalliance-repackaged-2.5.0-b32.jar
-file.reference.darcula-1.0.0.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\darcula-1.0.0.jar
-file.reference.hk2-api-2.5.0-b32.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\hk2-api-2.5.0-b32.jar
-file.reference.hk2-locator-2.5.0-b32.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\hk2-locator-2.5.0-b32.jar
-file.reference.hk2-utils-2.5.0-b32.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\hk2-utils-2.5.0-b32.jar
-file.reference.jackson-all-1.9.11.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jackson-all-1.9.11.jar
-file.reference.jackson-annotations-2.8.8.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jackson-annotations-2.8.8.jar
-file.reference.jackson-core-2.8.8.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jackson-core-2.8.8.jar
-file.reference.jackson-databind-2.8.8.1.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jackson-databind-2.8.8.1.jar
-file.reference.javassist-3.20.0-GA.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\javassist-3.20.0-GA.jar
-file.reference.javax.annotation-api-1.2.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\javax.annotation-api-1.2.jar
-file.reference.javax.inject-2.5.0-b32.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\javax.inject-2.5.0-b32.jar
-file.reference.javax.servlet-api-3.0.1.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\javax.servlet-api-3.0.1.jar
-file.reference.javax.ws.rs-api-2.0.1.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\javax.ws.rs-api-2.0.1.jar
-file.reference.jaxb-api-2.2.7.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jaxb-api-2.2.7.jar
-file.reference.jersey-client.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jersey-client.jar
-file.reference.jersey-common.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jersey-common.jar
-file.reference.jersey-container-servlet-core.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jersey-container-servlet-core.jar
-file.reference.jersey-container-servlet.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jersey-container-servlet.jar
-file.reference.jersey-guava-2.25.1.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jersey-guava-2.25.1.jar
-file.reference.jersey-media-jaxb.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jersey-media-jaxb.jar
-file.reference.jersey-server.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\jersey-server.jar
-file.reference.json-simple-1.1.1.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\json-simple-1.1.1.jar
-file.reference.json-simple-2.3.0.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\json-simple-2.3.0.jar
-file.reference.json-simple-3.0.2.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\json-simple-3.0.2.jar
-file.reference.json-simple-3.1.0.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\json-simple-3.1.0.jar
-file.reference.org.osgi.core-4.2.0.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\org.osgi.core-4.2.0.jar
-file.reference.osgi-resource-locator-1.0.1.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\osgi-resource-locator-1.0.1.jar
-file.reference.persistence-api-1.0.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\persistence-api-1.0.jar
-file.reference.validation-api-1.1.0.Final.jar=C:\\Users\\David\\Documents\\NetBeansProjects\\libs\\validation-api-1.1.0.Final.jar
+file.reference.aopalliance-repackaged-2.5.0-b32.jar=C:\\temp\\libs\\aopalliance-repackaged-2.5.0-b32.jar
+file.reference.darcula-1.0.0.jar=C:\\temp\\libs\\darcula-1.0.0.jar
+file.reference.hk2-api-2.5.0-b32.jar=C:\\temp\\libs\\hk2-api-2.5.0-b32.jar
+file.reference.hk2-locator-2.5.0-b32.jar=C:\\temp\\libs\\hk2-locator-2.5.0-b32.jar
+file.reference.hk2-utils-2.5.0-b32.jar=C:\\temp\\libs\\hk2-utils-2.5.0-b32.jar
+file.reference.jackson-all-1.9.11.jar=C:\\temp\\libs\\jackson-all-1.9.11.jar
+file.reference.jackson-annotations-2.8.8.jar=C:\\temp\\libs\\jackson-annotations-2.8.8.jar
+file.reference.jackson-core-2.8.8.jar=C:\\temp\\libs\\jackson-core-2.8.8.jar
+file.reference.jackson-databind-2.8.8.1.jar=C:\\temp\\libs\\jackson-databind-2.8.8.1.jar
+file.reference.javassist-3.20.0-GA.jar=C:\\temp\\libs\\javassist-3.20.0-GA.jar
+file.reference.javax.annotation-api-1.2.jar=C:\\temp\\libs\\javax.annotation-api-1.2.jar
+file.reference.javax.inject-2.5.0-b32.jar=C:\\temp\\libs\\javax.inject-2.5.0-b32.jar
+file.reference.javax.servlet-api-3.0.1.jar=C:\\temp\\libs\\javax.servlet-api-3.0.1.jar
+file.reference.javax.ws.rs-api-2.0.1.jar=C:\\temp\\libs\\javax.ws.rs-api-2.0.1.jar
+file.reference.jaxb-api-2.2.7.jar=C:\\temp\\libs\\jaxb-api-2.2.7.jar
+file.reference.jersey-client.jar=C:\\temp\\libs\\jersey-client.jar
+file.reference.jersey-common.jar=C:\\temp\\libs\\jersey-common.jar
+file.reference.jersey-container-servlet-core.jar=C:\\temp\\libs\\jersey-container-servlet-core.jar
+file.reference.jersey-container-servlet.jar=C:\\temp\\libs\\jersey-container-servlet.jar
+file.reference.jersey-guava-2.25.1.jar=C:\\temp\\libs\\jersey-guava-2.25.1.jar
+file.reference.jersey-media-jaxb.jar=C:\\temp\\libs\\jersey-media-jaxb.jar
+file.reference.jersey-server.jar=C:\\temp\\libs\\jersey-server.jar
+file.reference.json-simple-1.1.1.jar=C:\\temp\\libs\\json-simple-1.1.1.jar
+file.reference.json-simple-2.3.0.jar=C:\\temp\\libs\\json-simple-2.3.0.jar
+file.reference.json-simple-3.0.2.jar=C:\\temp\\libs\\json-simple-3.0.2.jar
+file.reference.json-simple-3.1.0.jar=C:\\temp\\libs\\json-simple-3.1.0.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=C:\\temp\\libs\\mysql-connector-java-5.1.45-bin.jar
+file.reference.org.osgi.core-4.2.0.jar=C:\\temp\\libs\\org.osgi.core-4.2.0.jar
+file.reference.osgi-resource-locator-1.0.1.jar=C:\\temp\\libs\\osgi-resource-locator-1.0.1.jar
+file.reference.persistence-api-1.0.jar=C:\\temp\\libs\\persistence-api-1.0.jar
+file.reference.validation-api-1.1.0.Final.jar=C:\\temp\\libs\\validation-api-1.1.0.Final.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.6.3.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jaspic-api.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.45-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-de.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-i18n-ko.jar:${j2ee.server.home}/lib/tomcat-i18n-ru.jar:${j2ee.server.home}/lib/tomcat-i18n-zh-CN.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
+j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-4.4.2.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/mysql-connector-java-5.1.45-bin.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
@@ -94,11 +95,11 @@ javac.classpath=\
     ${file.reference.json-simple-2.3.0.jar}:\
     ${file.reference.json-simple-3.0.2.jar}:\
     ${file.reference.json-simple-3.1.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}:\
     ${file.reference.org.osgi.core-4.2.0.jar}:\
     ${file.reference.osgi-resource-locator-1.0.1.jar}:\
     ${file.reference.persistence-api-1.0.jar}:\
-    ${file.reference.validation-api-1.1.0.Final.jar}:\
-    ${libs.eclipselink.classpath}
+    ${file.reference.validation-api-1.1.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -126,7 +127,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
